<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentoInicial" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="393dp"
        android:layout_height="69dp"
        android:text="@string/trivia_welcome_msg"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/write_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/comenzar_trivia_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>